# serializer version: 1
# name: test_set_hotkeygen_context
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": ["KEY_LEFTALT", "KEY_F4"], "menu": "KEY_MENU"}',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_cleanup
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": ["KEY_LEFTALT", "KEY_F4"]}',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_config[{'exithotkeyonly': '1'}-{'exit': 'KEY_EXIT', 'menu': 'KEY_MENU'}]
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": "KEY_EXIT"}',
          '--disable-common',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_config[{'exithotkeyonly': '1'}-{'menu': 'KEY_MENU'}]
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{}',
          '--disable-common',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_config[{'uimode': 'Full'}-{'exit': 'KEY_EXIT', 'menu': 'KEY_MENU'}]
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": "KEY_EXIT", "menu": "KEY_MENU"}',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_config[{'uimode': 'Kiosk'}-{'exit': 'KEY_EXIT', 'b': 'KEY_B'}]
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": "KEY_EXIT", "b": "KEY_B"}',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_set_hotkeygen_context_config[{'uimode': 'Kiosk'}-{'exit': 'KEY_EXIT', 'menu': 'KEY_MENU'}]
  _CallList([
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--new-context',
          'test',
          '{"exit": "KEY_EXIT"}',
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          'hotkeygen',
          '--default-context',
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
